--- a/_ci_pipeline.yml
+++ b/_ci_pipeline.yml
@@ -6,7 +6,7 @@ services:
       build:
         context: .
         dockerfile: Dockerfile.CI
-      command: ["pytest", "-n", "auto", "--asyncio-mode=auto", "--cov=.", "--cov-report=xml:/app/coverage/coverage.xml", "--cov-report=term-missing"]
+      command: ["pytest", "-n", "auto", "--cov=.", "--cov-report=xml:/app/coverage/coverage.xml", "--cov-report=term-missing"]
       env_file:
         - ~/.cv_deploy.env
       volumes:
