--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker-compose -f _cid_pipeline.yaml up --build -d
+        docker-compose -f _cd_pipeline.yaml up --build -d
