--- a/_cd_pipeline.yaml
+++ b/_cd_pipeline.yaml
@@ -1,19 +1,18 @@
-version: '3'
+version: "3"
 
 services:
-
   fastapi-app:
     container_name: cvdeploy
     build: .
     ports:
       - "8001:8001"
     env_file:
-      - ~/.cv_deploy.env
+      - ./.cv_deploy.env
     networks:
       micro-services-network:
         ipv4_address: 192.168.0.10
     restart: always
-  
+
   redis:
     image: "redis:latest"
     ports:
@@ -21,9 +20,9 @@ services:
     volumes:
       - ~/redis_data:/data
     networks:
-        micro-services-network:
-          ipv4_address: 192.168.0.7
-  
+      micro-services-network:
+        ipv4_address: 192.168.0.7
+
   worker:
     container_name: celery_workers
     build:
@@ -31,16 +30,15 @@ services:
       dockerfile: Dockerfile.Celery
     command: celery -A app.services.celery.celery_config.celery_app worker --loglevel=info
     env_file:
-      - ~/.cv_deploy.env
+      - ./.cv_deploy.env
     depends_on:
       - redis
       - fastapi-app
     networks:
-        micro-services-network:
-          ipv4_address: 192.168.0.8
+      micro-services-network:
+        ipv4_address: 192.168.0.8
     volumes:
       - ~/celery_store1:/celery-data
-
 
 networks:
   micro-services-network:
