--- a/.github/workflows/docs-deploye.yml
+++ b/.github/workflows/docs-deploye.yml
@@ -3,13 +3,12 @@ name: Deploy MkDocs Site
 on:
   push:
     branches:
-      - main
+      - md-branch
 
 permissions:
-      contents: write
-      pages: write
-      id-token: write
-      
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   deploy-docs:
@@ -22,13 +21,13 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-            pip install mkdocs mkdocstrings mkdocs-material mkdocstrings-python
+          pip install mkdocs mkdocstrings mkdocs-material mkdocstrings-python
       - name: Build MkDocs site
         run: mkdocs build
       - name: gitconfig
         run: |
-            git config user.name github-actions[bot]
-            git config user.email github-actions[bot]@users.noreply.github.com
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3 # Check if there's a newer version
         with:
