--- a/_cd_pipeline.yaml
+++ b/_cd_pipeline.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8001:8001"
     env_file:
-      - ~/.cv_deploy.env
+      - .cv_deploy.env
     networks:
       micro-services-network:
         ipv4_address: 192.168.0.10
@@ -30,7 +30,7 @@ services:
       dockerfile: Dockerfile.Celery
     command: celery -A app.services.celery.celery_config.celery_app worker --loglevel=info
     env_file:
-      - ~/.cv_deploy.env
+      - .cv_deploy.env
     depends_on:
       - redis
       - fastapi-app
